fixed ivyde config. added Art's script patches. added start webapp method to loaders. added installer service and webapp. added file and property util classes.
git-svn-id: http://red5.googlecode.com/svn/java/server/trunk@2963 1b6495e4-3631-0410-8e05-8f51eee8b9cc