@@ -1,27 +1,9 @@
 #!/bin/bash
 
-# JMX options
-JMX_OPTS="-Djava.security.manager -Djava.security.policy=conf/red5.policy"
+if [ -z "$RED5_HOME" ]; then export RED5_HOME=.; fi
 
 # Debug options
-JAVA_OPTS="-Xdebug -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y"
-
-# Jython options
-JYTHON="-Dpython.home=lib"
-
-for JAVA in "$JAVA_HOME/bin/java" "/usr/bin/java" "/usr/local/bin/java"
-do
-  if [ -x $JAVA ]
-  then
-    break
-  fi
-done
-
-if [ ! -x $JAVA ]
-then
-  echo "Unable to locate java. Please set JAVA_HOME environment variable."
-  exit
-fi
+export JAVA_OPTS="-Xdebug -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y"
 
 # Start Red5
-exec $JAVA $JMX_OPTS $JAVA_OPTS $JYTHON -cp red5.jar:conf:$CLASSPATH org.red5.server.Standalone
+exec $RED5_HOME/red5.sh
