@@ -1,14 +1,9 @@
 @echo off
 
-if not "%JAVA_HOME%" == "" goto launchRed5
+if NOT DEFINED RED5_HOME set RED5_HOME=.
 
-:launchRed5
-"%JAVA_HOME%/bin/java" -Djavax.net.ssl.keyStore=conf/truststore.jmx -Djavax.net.ssl.keyStorePassword=trustword -Djava.security.manager -Djava.security.policy=conf/red5.policy -cp red5.jar;conf;bin org.red5.server.Shutdown 9999 red5user changeme
-goto finaly
-
-:err
-echo JAVA_HOME environment variable not set! Take a look at the readme.
-pause
-
-:finaly
-
+set JAVA_OPTS=-Djavax.net.ssl.keyStore=%RED5_HOME%\conf\keystore.jmx -Djavax.net.ssl.keyStorePassword=password
+set RED5_CLASSPATH=%RED5_HOME%\red5.jar;%RED5_HOME%:\conf;%CLASSPATH%
+set RED5_MAINCLASS=org.red5.server.Shutdown
+set RED5_OPTS=9999 red5user changeme
+%RED5_HOME%\red5.bat
